# zulu

./: .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  DEVGUIDE.rst  README.rst  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: main.yml
docs/: Makefile  api.rst  conf.py  guide.rst  index.rst  installation.rst  versioning.rst
src/zulu/: __init__.py  __version__.py  _compat.py  api.py  delta.py  helpers.py  parser.py  timer.py  zulu.py
tests/: fixtures.py  test_api.py  test_datetime.py  test_delta.py  test_timedelta.py  test_timer.py  test_utc.py  test_zulu.py
zulu/: __init__.py  __pkg__.py  _compat.py  api.py  datetime.py  delta.py  parser.py  timedelta.py  utc.py  utils.py  zulu.py
