[metadata]
name = zulu
version = 1.2.0
author = Derrick Gilland
author_email = dgilland@gmail.com
url = https://github.com/dgilland/zulu
description = A drop-in replacement for native datetimes that embraces UTC
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = zulu date time datetime timedelta utc parser
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
install_requires =
    Babel>=2.3.4
    iso8601>=0.1.11
    python-dateutil>=2.6.0
    pytimeparse>=1.1.5

[options.packages.find]
where = src

[options.extras_require]
dev =
    coverage
    flake8
    pylint
    pytest
    pytest-cov
    pytz
    Sphinx
    sphinx-rtd-theme
    tox
    twine
    wheel


[bdist_wheel]
universal = 1
